# ambition_music_renderer

./: .gitignore  MUSIC_RENDERER_REFACTOR_ROADMAP.md  README.md  SFZ_INSTRUMENT_NOTES.md  arrangement_audit.py  audit_cue_balance.py  dissonance_audit.py  download_ambition_audio_tools.sh  goals.md  install_first_goblin_tune_v2.py  level_report.py  make_first_goblin_transition_lab.py  pyproject.toml  reference_audio_audit.py  render_first_goblin_transition_lab.sh  render_music.sh  setup.sh  shrill_note_audit.py  sour_note_audit.py  spectral_compare.py  spectral_localize.py  transition_audit.py
ambition_music_renderer/: _paths.py  arrangement_audit.py  audio_plugins.py  audio_utils.py  audit_cue_balance.py  batch_bundle.py  cli.py  cue_bundle.py  dissonance_audit.py  fallback_backend.py  guitar_performance.py  instrument_libraries.py  kwconf_runner.py  level_report.py  loudness.py  make_first_goblin_transition_lab.py  musicir_renderer.py  profiler.py  reference_audio_audit.py  render_group_worker.py  render_isolated.py  shrill_note_audit.py  sour_note_audit.py
ambition_music_renderer/audit/: _common.py  _pianoroll.py  _score_common.py  arrangement_audit.py  audit_cue_balance.py  dissonance_audit.py  instrument_resolution.py  lead_collision.py  level_report.py  mix_balance_audit.py  pitch_stability.py  reference_audio_audit.py  shrill_note_audit.py  sour_note_audit.py  spectral_compare.py  spectral_localize.py  transition_audit.py
ambition_music_renderer/backends/: __init__.py  external_fx.py  lv2_backend.py  pedalboard_backend.py  plugin_chain.py  sfizz_backend.py
ambition_music_renderer/legacy/: __init__.py  install_first_goblin_tune_v2.py  make_first_goblin_transition_lab.py
ambition_music_renderer/render/: audio_utils.py  batch_bundle.py  bundle.py  bundle_adaptive_reports.py  bundle_archive.py  bundle_audio_reports.py  bundle_base.py  bundle_options.py  bundle_quality_brief.py  bundle_reports.py  bundle_spectral_reports.py  bundle_spectrograms.py  effects.py  export.py  generated_layout.py  group.py  group_worker.py  isolated.py  kernels.py  musicir_config.py  musicir_renderer.py  score.py  score_core.py  score_events.py  score_layers.py  score_theory.py  synth.py
ambition_music_renderer_old/: __init__.py  __main__.py  _audio_kernels.py  cue_bundle.py  guitar_performance.py  install_first_goblin_tune_v2.py  musicir_renderer.py  reference_audio_audit.py  render_group_worker.py  render_isolated.py  sour_note_audit.py  transition_audit.py
ambition_music_renderer_old/backends/: lv2_backend.py  plugin_chain.py
docs/: handoff-bramble-inspired-song-DONE.md  handoff-bramble-inspired-song.md
scores/active/: a_possible_morning.music.yaml  argand_overdrive.music.yaml  argand_waltz.music.yaml  artists_guild_chiaroscuro.music.yaml  between_objectives.music.yaml  broken_transmitter.music.yaml  burn_rate_bossa.music.yaml  cartridge_constables.music.yaml  doves_of_the_commons.music.yaml  (+39 more)
tests/: test_audio_kernels.py  test_audio_plugins.py  test_bundle_spectrograms.py  test_cue_bundle.py  test_expression_extensions.py  test_guitar_performance.py  test_instrument_libraries.py  test_instrument_resolution.py  test_kwconf_runner.py  test_level_report.py  test_mix_balance_audit.py  test_raid_enforcer_theme.py  test_refactor_hygiene.py  test_renderer_audit_fixes.py  test_renderer_correctness_fixes.py  test_sfz_range_fold.py
(+17 files in other folders)
